# kiss

./: .gitattributes  .gitignore  .kissconfig  .kissignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  config_default.toml  design.md  grounding.md  journal.md  kissconfig-default  pytest.ini  style.md
docs/: kiss.tex
scripts/: check-untracked.sh  pre-commit-clippy.sh  pre-commit-kiss.sh  pre-commit.sh  stress_test.sh
src/: analyze.rs  analyze_cache.rs  analyze_parse.rs  check_cache.rs  check_universe_cache.rs  cli_output.rs  config.rs  config_gen.rs  counts.rs  defaults.rs  discovery.rs  duplication.rs  gate_config.rs  graph.rs  layout.rs  layout_cycles.rs  layout_layers.rs  layout_output.rs  lib.rs  macro_expr_parser.rs  main.rs  minhash.rs  parsing.rs  py_imports.rs  py_metrics.rs  rule_defs.rs  rules.rs  rust_counts.rs  rust_fn_metrics.rs  rust_graph.rs  rust_lcom.rs  rust_parsing.rs  rust_test_refs.rs  rust_units.rs  show_tests.rs  shrink.rs  stats.rs  stats_detailed.rs  symbol_mv.rs  test_git.rs  (+8 more)
tests/: c2_break_orphans.rs  c2_break_test_coverage.rs  cache_integration.rs  cli_integration.rs  config_tests.rs  conftest.py  coverage_helpers.rs  fix_h1_error_nodes.rs  fix_h5_phantom_orphans.rs  integration_suite.rs  journal_hypotheses.rs  kpop_definitions.rs  kpop_python_function_metrics.rs  kpop_python_graph_metrics.rs  kpop_python_none.rs  kpop_python_none_graph_and_gates.rs  kpop_rust_counts_metrics.rs  kpop_rust_function_metrics.rs  kpop_rust_graph_metrics.rs  kpop_rust_none.rs  kpop_rust_none_graph_and_gates.rs  kpop_show_tests_bug.rs  lib_integration.rs  main_integration.rs  py_metrics_tests.rs  python_counts_violations.rs  rules_config_integration.rs  rust_counts_violations.rs  stress_break_kiss.rs  test_placeholder.py  (+1 more)
(+388 files in other folders)
